[package]
name = "cli-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
clap = {version = "4.3.4", features = ["derive"]}
camino = {version = "1.1.4"}
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
