[package]
edition = "2021"
name    = "cli-3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap    = { version = "4.3.4", features = ["derive"] }
dotenvy = "0.15"
sqlx    = { version = "0.7", features = ["runtime-tokio", "migrate", "sqlite"] }
tokio   = { version = "1.3", features = ["macros", "rt"] }
