[package]
name = "json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.3"
nu-ansi-term = "0.48.0"
serde_json = "1.0.96"
serde = {version = "1.0", features = ["derive"]}

[[bench]]
name = "my_benchmark"
harness = false
