[package]
edition = "2021"
name    = "mare-website"
version = "0.1.0"

[dependencies]
anyhow             = "1.0"
askama             = "0.12.1"
axum               = { version = "0.6", features = ["headers", "macros", "form"] }
cli-3              = { path = "E:\\dev\\json\\cli-3" }
dotenvy            = "0.15"
env_logger = "0.10.0"
futures            = "0.3"
hyper              = "0.14"
itertools          = "0.11"
serde              = { version = "1.0", features = ["derive"] }
sqlx               = "0.7"
tokio              = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3" }
