[package]
edition = "2021"
name    = "mare-website"
version = "0.1.0"

[dependencies]
anyhow             = "1.0"
askama             = { version = "0.12.1", features = ["with-axum"] }
askama_axum        = "0.3.0"
axum               = { version = "0.6", features = ["headers", "macros", "form"] }
chrono             = { version = "0.4.31", features = ["serde"] }
cli-3              = { path = "E:\\dev\\json\\cli-3" }
dotenvy            = "0.15"
env_logger         = "0.10.0"
futures            = "0.3"
hyper              = "0.14"
itertools          = "0.12"
log                = "0.4.20"
reqwest            = { version = "0.11.22", features = ["json"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.108"
sqlx               = { version = "0.7", features = ["sqlite"] }
tokio              = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing            = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
